--- a/ecommerce-app/package.json
+++ b/ecommerce-app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@commercetools/sdk-client": "^4.0.1",
+    "dotenv": "^16.5.0",
     "husky": "^9.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
