--- a/ecommerce-app/package.json
+++ b/ecommerce-app/package.json
@@ -13,7 +13,9 @@
     "@commercetools/sdk-client": "^4.0.1",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.12.1",
     "husky": "^9.1.7",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
